apps/oxlint/src/snapshots/fixtures__cli__issue_10394_-c .oxlintrc.json@oxlint.snap
---
source: apps/oxlint/src/tester.rs
assertion_line: 142
---
########## 
arguments: -c .oxlintrc.json
working directory: fixtures/cli/issue_10394
----------

  ! jest(valid-title): Should not have an empty title
   ,-[foo.test.ts:1:10]
 1 | describe("", () => {
   :          ^^
 2 |   //
   `----
  help: Write a meaningful title for your test

  ! vitest(valid-title): Should not have an empty title
   ,-[foo.test.ts:1:10]
 1 | describe("", () => {
   :          ^^
 2 |   //
   `----
  help: Write a meaningful title for your test

Found 2 warnings and 0 errors.
Finished in <variable>ms on 1 file with 96 rules using 1 threads.
----------
CLI result: LintSucceeded
----------
