apps/oxlint/src/snapshots/fixtures__cli__tsgolint_--type-aware --silent@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: --type-aware --silent
working directory: fixtures/cli/tsgolint
----------
Type-aware Svelte linting is not supported yet; `.svelte` files are excluded from TypeScript type-aware checks and use rsvelte syntax diagnostics plus non-type-aware linting.

Found 0 warnings and 81 errors.
Finished in <variable>ms on 60 files with 59 rules using 1 threads.
----------
CLI result: LintFoundErrors
----------
